--- a/api/package.json
+++ b/api/package.json
@@ -1,46 +1,38 @@
 {
-	"name": "api",
-	"version": "1.0.0",
-	"main": "index.js",
-	"scripts": {
-		"test": "jest",
-		"build": "npx tsc",
-		"start": "node dist/index.js",
-		"dev": "nodemon src/index.ts",
-		"seed": "prisma db seed",
-		"migrate": "prisma migrate dev",
-		"migrate:reset": "prisma migrate reset",
-		"lint": "eslint src"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"description": "",
-	"devDependencies": {
-		"@eslint/js": "^9.12.0",
-		"@snaplet/copycat": "^5.0.0",
-		"@types/express": "^5.0.0",
-		"@types/jest": "^29.5.13",
-		"@types/node": "^22.7.5",
-		"@types/supertest": "^6.0.2",
-		"eslint": "^9.12.0",
-		"express": "^4.21.0",
-		"globals": "^15.10.0",
-		"jest": "^29.7.0",
-		"prisma": "^6.1.0",
-		"supertest": "^7.0.0",
-		"ts-jest": "^29.2.5",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.6.2",
-		"typescript-eslint": "^8.8.1"
-	},
-	"dependencies": {
-		"@prisma/client": "^6.1.0",
-		"cors": "^2.8.5",
-		"express-validator": "^7.2.0",
-		"nodemon": "^3.1.7"
-	},
-	"prisma": {
-		"seed": "ts-node prisma/seed/main.ts"
-	}
+    "name": "api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "seed": "prisma db seed",
+        "migrate": "prisma migrate dev",
+        "migrate:reset": "prisma migrate reset",
+        "lint": "eslint src"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "@eslint/js": "^9.12.0",
+        "@snaplet/copycat": "^5.0.0",
+        "eslint": "^9.12.0",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.7",
+        "prisma": "^6.1.0",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5"
+    },
+    "dependencies": {
+        "@prisma/client": "^6.1.0",
+        "api": "file:",
+        "cors": "^2.8.5",
+        "express": "^4.21.0",
+        "express-validator": "^7.2.0"
+    },
+    "prisma": {
+        "seed": "node prisma/seed/main.js"
+    }
 }
