--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,6 @@
         "test": "jest",
         "start": "node src/index.js",
         "dev": "nodemon src/index.js",
-        "seed": "prisma db seed",
-        "migrate": "prisma migrate dev",
-        "migrate:reset": "prisma migrate reset",
         "lint": "eslint src"
     },
     "keywords": [],
@@ -21,18 +18,14 @@
         "eslint": "^9.12.0",
         "jest": "^29.7.0",
         "nodemon": "^3.1.7",
-        "prisma": "^6.1.0",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5"
     },
     "dependencies": {
-        "@prisma/client": "^6.1.0",
         "api": "file:",
         "cors": "^2.8.5",
         "express": "^4.21.0",
-        "express-validator": "^7.2.0"
-    },
-    "prisma": {
-        "seed": "node prisma/seed/main.js"
+        "express-validator": "^7.2.0",
+        "mysql2": "^3.1.0"
     }
 }
